header footer done

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@next/font": "13.1.5",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.5",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.4",
     "next": "13.1.5",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
