sign in and sign up

--- a/.env
+++ b/.env
@@ -1,1 +1,31 @@
+#  database----------------------
 MONGODB_URL = mongodb+srv://syket:1234@cluster0.f7dyv.mongodb.net/shoppay?retryWrites=true&w=majority
+# next auth ------------------------------
+JWT_SECRET = 1234
+NEXTAUTH_URL = http://localhost:3000
+BASE_URL = http://localhost:3000
+# ---------------
+GITHUB_ID = 737c92d6d1a36ad94451
+GITHUB_SECRET = 53fea86c62a18632174ae62a5a50c3f66b5044ec
+# ---------------
+GOOGLE_ID = 588441732628-shnu9ficqmja0ftleda0ikkhok58kgdv.apps.googleusercontent.com
+GOOGLE_SECRET = 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
+# ---------------
+TWITTER_ID = 
+TWITTER_SECRET = 
+# ---------------
+AUTH0_CLIENT_ID = mPjHztp5OHVevw5ZROIpHbSlTHyTb94S
+AUTH0_CLIENT_SECRET = xaivHK-PgYBehRy51s0QNKwx1a5bjIEULmfceccCeS7NhG9554QTGrcksjZr6APE
+AUTH0_ISSUER = https://syket.us.auth0.com
+# next auth ------------------------------
+
+
+# Tokens jwt ------------------------------
+ACTIVATION_TOKEN_SECRET = 12345
+RESET_TOKEN_SECRET = 12345
+
+# Mail ------------------------------
+MAILING_SERVICE_CLIENT_ID = 556034455383-1g1dsgbk6dns9p6cm6pb6cidhv0bdl7q.apps.googleusercontent.com
+MAILING_SERVICE_CLIENT_SECRET = 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
+MAILING_SERVICE_REFRESH_TOKEN=1//04L5gudQV4aQgCgYIARAAGAQSNwF-L9IraX0PYeIPGr34T-R4TGNrh4nAA7lSlOdLTyqR67ifANOw-lhyVw-wNWb0JfBUMlKiKs8
+SENDER_EMAIL_ADDRESS= saiketsd23@gmail.com
